<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp">

    <ImageView
        android:id="@+id/match_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_date"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/match_adversaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_adversaire"/>

            <TextView
                android:id="@+id/match_adversaire_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_adversaire_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"/>
            <TextView
                android:id="@+id/resultat_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_finale"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_cell_arrow"
        android:layout_gravity="center|right"/>
</LinearLayout>
