<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/presentation_appli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                android:text="@string/welcome_config_message"/>

            <EditText
                android:id="@+id/team_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/footballteamname_hint"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_ok_button"/>
    </LinearLayout>

</LinearLayout>
